--- a/drf_tutorial.org
+++ b/drf_tutorial.org
@@ -16,7 +16,7 @@
 
 ** Router
    + determine how URLs be mapped to business logic
-*** ~Default Router~
+*** ~DefaultRouter~
     + ~register(prefix, viewset)~ 
     #+BEGIN_SRC python
       router = routers.DefaultRouter()
@@ -73,6 +73,123 @@
     + ~CursorPagination~
 
 ** Filter
+   + restrict items returned from API
+   + use together with ~ModelViewSet~
+*** Set Filter Backend
+    + Global setting
+      #+BEGIN_SRC python
+        REST_FRAMEWORK = {
+            'DEFAULT_FILTER_BACKENDS': ('rest_framework.filters.DjangoFilterBackend',)
+        }
+      #+END_SRC
+    + Local setting, per view
+      #+BEGIN_SRC python
+        class UserListView(generics.ListAPIView):
+            queryset = User.objects.all()
+            serializer_class = UserSerializer
+            filter_backends = (filters.DjangoFilterBackend,)
+      #+END_SRC
+*** ~DjangoFilterBackend~
+    + highly customizable
+    + dependency: ~django-filter~
+**** ~FilterSet~
+     #+BEGIN_SRC python
+       class ProductFilter(filters.FilterSet):
+           min_price = django_filters.NumberFilter(name="price", lookup_expr='gte')
+           max_price = django_filters.NumberFilter(name="price", lookup_expr='lte')
+           class Meta:
+               model = Product
+               fields = ['category', 'in_stock', 'min_price', 'max_price']
 
+       class ProductList(generics.ListAPIView):
+           queryset = Product.objects.all()
+           serializer_class = ProductSerializer
+           filter_backends = (filters.DjangoFilterBackend,)
+           filter_class = ProductFilter
+     #+END_SRC
+     + Sample Request, ~http://example.com/api/products?category=clothing&max_price=10.00~
+**** Filter fields
+     + automatically create a ~FilterSet~ for given fields
+     + ~filter_fields~ on the viewset
+       #+BEGIN_SRC python
+         class ProductList(generics.ListAPIView):
+             queryset = Product.objects.all()
+             serializer_class = ProductSerializer
+             filter_backends = (filters.DjangoFilterBackend,)
+             filter_fields = ('category', 'in_stock')
+       #+END_SRC
+*** ~SearchFilter~
+    + only be applied if view has a ~search_fields~
+      #+BEGIN_SRC python
+        class UserListView(generics.ListAPIView):
+            queryset = User.objects.all()
+            serializer_class = UserSerializer
+            filter_backends = (filters.SearchFilter,)
+            search_fields = ('username', 'email')
+      #+END_SRC
+    + search behaviour restricted by prepending various character
+      + '^' starts-with search
+      + '=' exact match
+      + '@' full-text serach (only support MySQL)
+      + '$' regex search
+      #+BEGIN_SRC python
+        search_fields = ('=username', '=email')
+      #+END_SRC
+    + Sample Request, ~http://example.com/api/users?search=russell~
+*** ~OrderingFilter~
+    + ~ordering_fields~, specify which fields should allowing in the ordering filter
+      #+BEGIN_SRC python
+        class UserListView(generics.ListAPIView):
+            queryset = User.objects.all()
+            serializer_class = UserSerializer
+            filter_backends = (filters.OrderingFilter,)
+            ordering_fields = ('username', 'email')
+      #+END_SRC
+    + ~ordering~ default ordering
+      #+BEGIN_SRC python
+        class UserListView(generics.ListAPIView):
+            queryset = User.objects.all()
+            serializer_class = UserSerializer
+            filter_backends = (filters.OrderingFilter,)
+            ordering_fields = ('username', 'email')
+            ordering = ('username',)
+      #+END_SRC
 ** Exception
-** Permission
+   + Handled exceptions:
+     + Subclasses of ~APIException~ raised inside REST framework
+     + Django's ~Http404~
+     + Django's ~PermissionDenied~
+*** ~EXCEPTION_HANDLER~ setting
+    + default setting
+      #+BEGIN_SRC python
+        REST_FRAMEWORK = {
+            'EXCEPTION_HANDLER': 'rest_framework.views.exception_handler'
+        }
+      #+END_SRC
+*** API Reference
+**** ~APIException~
+     + *base class* for all exceptions
+**** ~ParseError~
+     + ~ParseError(detail=None)~
+     + raised if the request contains malformed data
+     + by default returns "400 Bad Request"
+**** ~AuthenticationFailed~
+     + ~AuthenticationFailed(detail=None)
+     + raised when incoming requst contains incorrect authentication
+     + depends on the authentication scheme, return "401" or "403"
+**** ~NotAuthenticated~
+     + ~NotAuthenticated(detail=None)~
+     + raised when an unauthenticated request fails the permission checks
+     + depends on the authentication scheme, return "401" or "403"
+**** ~PermissionDenied~
+     + ~PermissionDenied(detail=None)~
+     + raise when an authenticated request fails the permission checks
+     + return "403"
+**** ~NotFound~
+     + ~NotFound(detail=None)~
+     + raise when a resource does not exist
+     + return "404"
+**** ~ValidationError~
+     + ~ValidationError(detail)~
+     + ~detail~ argument is mandatory
+     + return "400"
